--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="EmotionApp.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Emotion Analyzer" Height="500" Width="600" Background="#f4f4f9" >
+        Title="Emotion Analyzer" Height="350" Width="500">
 
     <Window.Resources>
         <!-- Style pour les boutons avec effets d'ombre et de dégradé -->
@@ -86,20 +86,21 @@
 
         <!-- Section Analyse Faciale avec un style -->
         <Button Content="Analyser les Émotions Faciales" 
-                Name="AnalyzeFaceButton" 
-                VerticalAlignment="Top" Margin="10,100,10,0" 
-                Click="AnalyzeFacialEmotion_Click" 
-                Background="#008CBA"/>
+        Name="AnalyzeFaceButton" 
+        VerticalAlignment="Top" Margin="10,100,10,0" 
+        Click="AnalyzeFacialEmotion_Click" 
+        Background="#008CBA"/>
 
         <!-- Section Analyse Textuelle -->
-        <TextBox Name="TextInputBox" Height="100" Width="400" 
-                 HorizontalAlignment="Center" VerticalAlignment="Center" 
-                 Margin="10" Text="Entrez le texte ici..." />
+      <TextBox Name="TextInputBox" Height="100" Width="400" 
+         HorizontalAlignment="Center" VerticalAlignment="Center" 
+         Margin="10" Text="Entrez le texte ici..." />
+
 
         <Button Content="Analyser les Émotions Textuelles" 
-                HorizontalAlignment="Center" VerticalAlignment="Bottom" 
-                Margin="10,10,10,50" Click="AnalyzeTextEmotion_Click" 
-                Background="#FF5733"/>
+        HorizontalAlignment="Center" VerticalAlignment="Bottom" 
+        Margin="10,10,10,50" Click="AnalyzeTextEmotion_Click" 
+        Background="#FF5733"/>
 
         <!-- Barre d'Information en bas -->
         <TextBlock Name="ResultTextBlock" 
